force-app/main/default/objects/Report__c/Report__c.object-meta.xml
<CustomObject>
    <label>Report</label>
    <nameField>
        <label>Report Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>