force-app/main/default/objects/Report__c/fields/Report_description__c.field-meta.xml
<CustomField>
    <fullName>Report_description__c</fullName>
    <label>Report description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>