force-app/main/default/objects/Report__c/fields/report_status__c.field-meta.xml
<CustomField>
    <fullName>report_status__c</fullName>
    <label>report status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>task completed</fullName>
            </value>
            <value>
                <fullName>task under progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>