force-app/main/default/objects/Report__c/fields/Task3__c.field-meta.xml
<CustomField>
    <fullName>Task3__c</fullName>
    <label>Task3</label>
    <referenceTo>Task3__c</referenceTo>
    <relationshipLabel>reports</relationshipLabel>
    <relationshipName>reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>